# pixel-wars

./: .gitignore  AGENT_API_PROPOSAL.md  Anchor.toml  IMPLEMENTATION_PLAN.md  README.md  architecture.excalidraw  package-lock.json  package.json
agents/: arcium-agent.ts  chaos.ts  common.ts  defender.ts  ecosystem.config.js  jito-agent.ts  magicblock-agent.ts  paint-agent.sh  picasso.ts  run-agent.ts  teams.ts  tsconfig.agent.json  tsconfig.json
app/: .env.local  .gitignore  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/api/canvas/: route.ts
app/src/app/api/game/: route.ts
app/src/app/api/join/: route.ts
app/src/app/api/paint/: route.ts
app/src/components/admin/: admin-panel.tsx
app/src/components/canvas/: color-picker.tsx  pixel-canvas.tsx
app/src/components/game/: agent-list.tsx  game-panel.tsx  player-stats.tsx  round-info.tsx  team-leaderboard.tsx
app/src/components/wallet/: wallet-button.tsx
app/src/lib/: bs58.d.ts  canvas-reader.ts  constants.ts  idl-types.ts  idl.json  pda.ts  program.ts  treasury.ts  use-game.ts
programs/pixel_wars/: Cargo.toml
programs/pixel_wars/src/: errors.rs  lib.rs  state.rs
programs/pixel_wars/src/instructions/: commit_canvas.rs  delegate_canvas.rs  end_round.rs  initialize.rs  mod.rs  place_pixel.rs  register_agent.rs  resize_canvas.rs  start_round.rs
scripts/: clean-round.ts  delegate-canvas.ts  devnet-test.ts  end-round.ts  new-round.ts  run-game.ts  start-game.ts  test-delegate.ts  test-place-pixel-er.ts
tests/: pixel-wars.ts
(+1 files in other folders)
